# CudaGeMM

./: .gitignore  CMakeLists.txt  README.md  batched_gemm_benchmark.cu  gemm_benchmark.cu
include/: kernels.h  kernels_calls.h  matrix.h  my_gemm.h  wrapper.h
src/: kernels.cu  kernels_calls.cu  matrix.cpp  my_gemm.cu  wrapper.cu
